<resources>
    <string name="app_name">ProjectTeam1</string>

    <string name="look">둘러보기</string>
    <string name="home">홈</string>
    <string name="mypage">마이페이지</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="profile_title">프로필 생성</string>
    <string name="profile_finish">생성하기</string>
    <string name="profile_personas">페르소나?</string>
    <string name="profile_personas_ex">작가</string>
    <string name="profile_nickname">닉네임</string>
    <string name="profile_nickname_ex">키키</string>
    <string name="profile_oneline">한줄소개</string>
    <string name="profile_oneline_ex">최대 30자까지 가능합니다.</string>

    <string name="splash_login">로그인</string>
</resources>