<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navHost"
    android:name = "androidx.navigation.fragment.NavHostFragment"
    app:defaultNavHost = "true"
    app:navGraph = "@navigation/home_navigation">

    <ImageView
        android:id="@+id/arrow_iv"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        android:layout_marginTop="55.72dp"
        android:layout_marginLeft="25.97dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/arrow_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/finish_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_finish"
        android:textColor="#58B8A1"
        android:textSize="14sp"
        android:layout_marginEnd="21dp"
        app:layout_constraintTop_toTopOf="@id/title_tv"
        app:layout_constraintBottom_toBottomOf="@id/title_tv"
        app:layout_constraintEnd_toEndOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_background"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_gravity="center"
        app:civ_border_overlay="true"
        app:civ_border_width="0dp"
        tools:ignore="MissingConstraints"
        android:src="#D6D6D6"
        android:layout_marginTop="138dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_iv"
        android:layout_width="49.77dp"
        android:layout_height="52.11dp"
        android:layout_gravity="center"
        app:civ_border_overlay="true"
        app:civ_border_width="0dp"
        tools:ignore="MissingConstraints"
        android:src="@drawable/icon_profile_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_background"
        app:layout_constraintBottom_toBottomOf="@id/profile_background"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/activie_background"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_gravity="center"
        app:civ_border_overlay="true"
        app:civ_border_width="0dp"
        tools:ignore="MissingConstraints"
        android:src="#777777"
        android:layout_marginTop="138dp"
        app:layout_constraintEnd_toEndOf="@id/profile_background"
        app:layout_constraintBottom_toBottomOf="@id/profile_background"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/activie_iv"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        app:civ_border_overlay="true"
        app:civ_border_width="0dp"
        tools:ignore="MissingConstraints"
        android:src="@drawable/ic_baseline_camera_alt_24"
        app:layout_constraintStart_toStartOf="@id/activie_background"
        app:layout_constraintEnd_toEndOf="@id/activie_background"
        app:layout_constraintTop_toTopOf="@id/activie_background"
        app:layout_constraintBottom_toBottomOf="@id/activie_background"
        />

    <TextView
        android:id="@+id/personas_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_personas"
        android:textSize="12sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="94dp"
        android:layout_marginLeft="31dp"
        app:layout_constraintTop_toBottomOf="@id/profile_iv"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/personas_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/profile_personas_ex"
        android:textSize="12sp"
        android:layout_marginLeft="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/personas_tv"
        app:layout_constraintBottom_toBottomOf="@id/personas_tv"
        app:layout_constraintStart_toEndOf="@id/personas_tv" />

    <View
        android:id="@+id/personas_view"
        android:layout_width="151dp"
        android:layout_height="1dp"
        android:background="#9A9A9A"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="23dp"
        app:layout_constraintStart_toStartOf="@id/personas_tv"
        app:layout_constraintTop_toBottomOf="@id/personas_tv"/>


    <TextView
        android:id="@+id/oneline_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_oneline"
        android:textSize="12sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="41dp"
        android:layout_marginLeft="31dp"
        app:layout_constraintTop_toBottomOf="@id/personas_tv"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/oneline_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/profile_oneline_ex"
        android:textSize="12sp"
        android:layout_marginLeft="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/oneline_tv"
        app:layout_constraintBottom_toBottomOf="@id/oneline_tv"
        app:layout_constraintStart_toEndOf="@id/oneline_tv"/>

    <View
        android:id="@+id/oneline_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#9A9A9A"
        android:layout_marginTop="9dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintTop_toBottomOf="@id/oneline_tv"
        app:layout_constraintStart_toStartOf="@id/personas_view"
        app:layout_constraintEnd_toEndOf="@id/nickname_view"/>

    <TextView
        android:id="@+id/nickname_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_nickname"
        android:textSize="12sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginEnd="31dp"
        app:layout_constraintTop_toTopOf="@id/personas_tv"
        app:layout_constraintStart_toEndOf="@id/personas_tv"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/nickname_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/profile_nickname_ex"
        android:textSize="12sp"
        android:layout_marginLeft="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/personas_tv"
        app:layout_constraintBottom_toBottomOf="@id/personas_tv"
        app:layout_constraintStart_toEndOf="@id/nickname_tv"/>

    <View
        android:id="@+id/nickname_view"
        android:layout_width="151dp"
        android:layout_height="1dp"
        android:background="#9A9A9A"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="23dp"
        app:layout_constraintStart_toStartOf="@id/nickname_tv"
        app:layout_constraintTop_toBottomOf="@id/personas_tv"/>


</androidx.constraintlayout.widget.ConstraintLayout>